codepkg/objects/Closeout_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Checklist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Checklist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Closeout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Closeout</label>
        <referenceTo>Project_Closeout__c</referenceTo>
        <relationshipLabel>Closeout Checklists</relationshipLabel>
        <relationshipName>Closeout_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Closeout Checklists</relationshipLabel>
        <relationshipName>Closeout_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Closeout Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Checklist__c</columns>
        <columns>Response__c</columns>
        <columns>Project__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Closeout Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closeout Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>